menu manajemen device
